# VoiceAssistant-Backend

./: .gitignore
agent/: .env.example  .gitignore  cinema_service.py  main.py  pyproject.toml  rag_service.py  requirements.txt
reservations/: .env.example  crud.py  docker-compose.yml  gunicorn_conf.py  main.py  models.py  pyproject.toml  requirements.txt  vectors.py
