[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
livekit-agents = "^0.12.6"
livekit-plugins-openai = "^0.10.13"
livekit-plugins-cartesia = "^0.4.5"
livekit-plugins-deepgram = "^0.6.16"
livekit-plugins-elevenlabs = "^0.7.9"
livekit-plugins-silero = "^0.7.4"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
aiohttp = "^3.11.11"
pinecone = {extras = ["grpc"], version = "^5.4.2"}
openai = "^1.59.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
